--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@ body {
 <!-- ===== SCREEN 3 ===== -->
 <div class="screen hidden" id="screen3">
   <div class="message-box">
-    <h2>Happy Birthday 💕</h2>
+    <h2>Happy Birthday Shuttumani💕</h2>
     <p>
       May your day be filled with smiles, laughter, and everything that makes
-      you happiest. You deserve all the love today and always. 🎉✨
+      you happiest. You deserve all the love today and always. And have a wonderful day gurl 🎉✨
     </p>
   </div>
 </div>
@@ -255,4 +255,5 @@ function serveSlice() {
 
 </body>
 </html>
+
 
