--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>I Love You Nanduzz</title>
+<title>I Love You Nanduzza</title>
 
 <style>
     body {
@@ -14,11 +14,21 @@
         text-align: center;
     }
 
-    /* Main beating heart */
-    .big-heart {
-        font-size: 150px;
-        margin-top: 40px;
+    /* Beating 💌 and text */
+    .beat {
         animation: heartbeat 1.4s infinite ease-in-out;
+        display: inline-block;
+    }
+
+    .main-heart {
+        font-size: 130px;
+        margin-top: 40px;
+    }
+
+    h1 {
+        font-size: 48px;
+        color: #d1004f;
+        margin-top: -5px;
     }
 
     @keyframes heartbeat {
@@ -29,13 +39,7 @@
         100% { transform: scale(1); }
     }
 
-    h1 {
-        font-size: 48px;
-        color: #d1004f;
-        margin-top: -10px;
-    }
-
-    /* Falling hearts */
+    /* Falling 💗 hearts */
     .heart {
         position: fixed;
         top: -10px;
@@ -54,64 +58,8 @@
 
 <body>
 
-<div class="big-heart">💗<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>I Love You Nanduzz</title>
-
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        background: #ffe6ef;
-        overflow: hidden;
-        font-family: "Poppins", sans-serif;
-        text-align: center;
-    }
-
-    /* Main beating heart */
-    .big-heart {
-        font-size: 150px;
-        margin-top: 40px;
-        animation: heartbeat 1.4s infinite ease-in-out;
-    }
-
-    @keyframes heartbeat {
-        0%   { transform: scale(1); }
-        25%  { transform: scale(1.18); }
-        40%  { transform: scale(1); }
-        60%  { transform: scale(1.22); }
-        100% { transform: scale(1); }
-    }
-
-    h1 {
-        font-size: 48px;
-        color: #d1004f;
-        margin-top: -10px;
-    }
-
-    /* Falling hearts */
-    .heart {
-        position: fixed;
-        top: -10px;
-        color: #ff4d88;
-        font-size: 20px;
-        animation: fall linear infinite;
-        opacity: 0.85;
-    }
-
-    @keyframes fall {
-        0% { transform: translateY(0) rotate(0deg); }
-        100% { transform: translateY(110vh) rotate(360deg); }
-    }
-</style>
-</head>
-
-<body>
-
-<div class="big-heart">💌</div>
-<h1>I love you nanduzz</h1>
+<div class="main-heart beat">💌</div>
+<h1 class="beat">I love you nanduzza</h1>
 
 <script>
     function createHeart() {
@@ -134,29 +82,4 @@
 </script>
 
 </body>
-</html></div>
-<h1>I love you nanduzz</h1>
-
-<script>
-    function createHeart() {
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
-        heart.innerText = "";
-
-        heart.style.left = Math.random() * 100 + "vw";
-        heart.style.animationDuration = (3 + Math.random() * 4) + "s";
-        heart.style.fontSize = (15 + Math.random() * 30) + "px";
-
-        document.body.appendChild(heart);
-
-        setTimeout(() => {
-            heart.remove();
-        }, 7000);
-    }
-
-    setInterval(createHeart, 300);
-</script>
-
-</body>
 </html>
-
