--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     h1 {
         font-size: 48px;
         color: #d1004f;
-        margin-top: -5px;
+        margin-top: 20px; /* moved down for spacing */
     }
 
     @keyframes heartbeat {
@@ -58,7 +58,10 @@
 
 <body>
 
+<!-- 💌 at the top -->
 <div class="main-heart beat">💌</div>
+
+<!-- Text below -->
 <h1 class="beat">I love you nanduzza</h1>
 
 <script>
