--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         background: #ffe6ef;
         overflow: hidden;
         font-family: "Poppins", sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;   /* centers horizontally */
         text-align: center;
+    }
+
+    /* Container to keep 💌 and text centered together */
+    .top-container {
+        margin-top: 40px;
     }
 
     /* Beating animation */
@@ -28,13 +36,12 @@
         100% { transform: scale(1); }
     }
 
-    /* 💌 at the top */
+    /* 💌 */
     .main-heart {
         font-size: 130px;
-        margin-top: 40px;
     }
 
-    /* Text below the 💌 */
+    /* Text */
     h1 {
         font-size: 48px;
         color: #d1004f;
@@ -60,11 +67,10 @@
 
 <body>
 
-<!-- 💌 centered at top -->
-<div class="main-heart beat">💌</div>
-
-<!-- Text centered below -->
-<h1 class="beat">I love you nanduzza</h1>
+<div class="top-container">
+    <div class="main-heart beat">💌</div>
+    <h1 class="beat">I love you nanduzza</h1>
+</div>
 
 <script>
     function createHeart() {
