--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         100% { transform: scale(1); }
     }
 
-    /* 💌 centered at top */
+    /* 💌 centered and moved lower */
     .main-heart {
         font-size: 130px;
         width: 100%;
         text-align: center;
-        margin-top: 40px;
+        margin-top: 150px; /* moved down */
     }
 
-    /* Text centered below */
+    /* Text below, also moved down */
     h1 {
         font-size: 48px;
         color: #d1004f;
-        margin-top: 20px;
+        margin-top: 25px;
         width: 100%;
         text-align: center;
     }
@@ -64,7 +64,7 @@
 
 <body>
 
-<!-- 💌 perfectly centered -->
+<!-- 💌 perfectly centered and lower -->
 <div class="main-heart beat">💌</div>
 
 <!-- Text below -->
