--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
         font-size: 18px;
         color: black;
         position: fixed;
-        bottom: 100px;   /* moved further up */
+        bottom: 100px;
         width: 100%;
         text-align: center;
         opacity: 0.85;
     }
 
+    /* Falling hearts restored */
     .heart {
         position: fixed;
-        top: -10px;
+        top: -50px; /* start higher so they appear */
         color: #ff4d88;
         font-size: 20px;
         animation: fall linear infinite;
         opacity: 0.85;
+        z-index: -1; /* behind everything */
     }
 
     @keyframes fall {
@@ -86,4 +88,18 @@
         heart.innerText = "💗";
 
         heart.style.left = Math.random() * 100 + "vw";
-        heart.style.animation
+        heart.style.animationDuration = (3 + Math.random() * 4) + "s";
+        heart.style.fontSize = (15 + Math.random() * 30) + "px";
+
+        document.body.appendChild(heart);
+
+        setTimeout(() => {
+            heart.remove();
+        }, 7000);
+    }
+
+    setInterval(createHeart, 300);
+</script>
+
+</body>
+</html>
