--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>I Love You Nanduzza</title>
 
 <style>
@@ -27,46 +28,47 @@
         100% { transform: scale(1); }
     }
 
+    /* 💌 heart */
     .main-heart {
-        font-size: 130px;
+        font-size: 22vw; /* responsive size */
+        margin-top: 25vh; /* pushes it down nicely on phones */
         width: 100%;
-        text-align: center;
-        margin-top: 150px;
     }
 
+    /* Text */
     h1 {
-        font-size: 48px;
+        font-size: 8vw; /* responsive */
         color: #d1004f;
-        margin-top: 25px;
+        margin-top: 3vh;
         width: 100%;
-        text-align: center;
     }
 
-    /* Bottom text moved higher */
+    /* Bottom text */
     .bottom-text {
-        font-size: 18px;
+        font-size: 4vw; /* responsive */
         color: black;
         position: fixed;
-        bottom: 100px;
+        bottom: 12vh; /* lifted for phones */
         width: 100%;
         text-align: center;
         opacity: 0.85;
+        padding: 0 20px;
     }
 
-    /* Falling hearts restored */
+    /* Falling hearts */
     .heart {
         position: fixed;
-        top: -50px; /* start higher so they appear */
+        top: -60px;
         color: #ff4d88;
-        font-size: 20px;
+        font-size: 6vw; /* responsive */
         animation: fall linear infinite;
         opacity: 0.85;
-        z-index: -1; /* behind everything */
+        z-index: -1;
     }
 
     @keyframes fall {
         0% { transform: translateY(0) rotate(0deg); }
-        100% { transform: translateY(110vh) rotate(360deg); }
+        100% { transform: translateY(120vh) rotate(360deg); }
     }
 </style>
 </head>
@@ -89,7 +91,6 @@
 
         heart.style.left = Math.random() * 100 + "vw";
         heart.style.animationDuration = (3 + Math.random() * 4) + "s";
-        heart.style.fontSize = (15 + Math.random() * 30) + "px";
 
         document.body.appendChild(heart);
 
