--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <h1 class="beat">I love you nanduzza</h1>
 
 <div class="bottom-text">
-    eth paranjillal orakam varilla athayalum time aduth alogich pina paranja mathi
+    Eth paranjillal orakam varilla athayalum time aduth alogich pina paranja mathi
 </div>
 
 <script>
@@ -100,5 +100,6 @@
 
     setInterval(createHeart, 300);
 </script>
+
 
 
