Modify birthday message and enhance styles
Updated birthday message for Nandana and adjusted styling.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body {
 <!-- ===== SCREEN 3 ===== -->
 <div class="screen hidden" id="screen3">
   <div class="message-box">
-    <h2>Happy Birthday Shuttumani💕</h2>
+    <h2>Happy Birthday Nandana💕</h2>
     <p>
       May your day be filled with smiles, laughter, and everything that makes
       you happiest. You deserve all the love today and always. And have a wonderful day gurl 🎉✨
@@ -255,3 +255,4 @@ function serveSlice() {
 
 </body>
 </html>
+
