--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <title>Happy Birthday 🎂</title>
 
 <style>
+/* ===== RESET ===== */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  -webkit-tap-highlight-color: transparent;
+  font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
+}
+
+html, body {
+  height: 100%;
 }
 
 body {
   background: #ffd6e8;
-  min-height: 100vh;
+  min-height: 100dvh; /* Better for iOS dynamic toolbars */
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  padding:
+    env(safe-area-inset-top)
+    env(safe-area-inset-right)
+    env(safe-area-inset-bottom)
+    env(safe-area-inset-left);
 }
 
 /* ===== SCREENS ===== */
@@ -30,7 +41,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  transition: opacity 1.2s ease;
+  transition: opacity 1s ease;
+  will-change: opacity;
 }
 
 .hidden {
@@ -40,24 +52,23 @@ body {
 
 /* ===== SCREEN 1 ===== */
 .card {
-  width: 90%;
-  max-width: 360px;
+  width: min(92vw, 380px);
   background: #fff3f7;
-  border-radius: 30px;
-  padding: 40px 28px;
+  border-radius: 28px;
+  padding: clamp(28px, 6vw, 40px) clamp(20px, 5vw, 28px);
   text-align: center;
   box-shadow: 0 25px 50px rgba(0,0,0,.15);
 }
 
 .card h1 {
   color: #ff2f92;
-  font-size: 1.9rem;
+  font-size: clamp(1.5rem, 5vw, 1.9rem);
   margin-bottom: 18px;
 }
 
 .card p {
   color: #444;
-  font-size: 1rem;
+  font-size: clamp(0.95rem, 3.5vw, 1.05rem);
   line-height: 1.6;
   margin-bottom: 22px;
 }
@@ -71,24 +82,32 @@ body {
   color: white;
   font-size: 1.05rem;
   cursor: pointer;
+  touch-action: manipulation;
+}
+
+.btn:active {
+  transform: scale(0.98);
 }
 
 /* ===== SCREEN 2 ===== */
 .instruction {
   position: absolute;
-  top: 7%;
-  font-size: 1.7rem;
+  top: max(6%, env(safe-area-inset-top));
+  font-size: clamp(1.2rem, 4.5vw, 1.6rem);
   color: #ff2f92;
+  text-align: center;
+  padding: 0 16px;
   transition: opacity 0.6s ease;
 }
 
 .cake-container {
   position: relative;
   user-select: none;
-  touch-action: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
   opacity: 0;
   transform: scale(0.85);
-  transition: opacity 1.8s ease, transform 1.8s ease;
+  transition: opacity 1.4s ease, transform 1.4s ease;
 }
 
 .cake-container.show {
@@ -97,65 +116,65 @@ body {
 }
 
 .cake-emoji {
-  font-size: 20rem;
+  font-size: clamp(10rem, 40vw, 18rem);
   position: relative;
-  transition: opacity 0.8s ease;
+  transition: opacity 0.7s ease;
 }
 
 .slice-emoji {
-  font-size: 18rem;
+  font-size: clamp(9rem, 38vw, 16rem);
   position: absolute;
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(0);
   opacity: 0;
-  transition: opacity 1.4s ease, transform 1.4s ease;
+  transition: opacity 1.2s ease, transform 1.2s ease;
 }
 
 .cake-text {
-  margin-top: 24px;
+  margin-top: 20px;
   color: black;
-  font-size: 1.5rem;
+  font-size: clamp(1.1rem, 4vw, 1.4rem);
   font-weight: 700;
   opacity: 0;
-  transition: opacity 1.2s ease;
+  transition: opacity 1s ease;
 }
 
 .flame {
   position: absolute;
-  top: -2rem;
+  top: -1.6rem;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 3rem;
+  font-size: clamp(1.6rem, 6vw, 2.6rem);
   animation: flicker 0.45s infinite alternate;
 }
 
 @keyframes flicker {
   0% { transform: translateX(-50%) translateY(0); }
-  50% { transform: translateX(-50%) translateY(-4px); }
+  50% { transform: translateX(-50%) translateY(-3px); }
   100% { transform: translateX(-50%) translateY(0); }
 }
 
 /* ===== SCREEN 3 ===== */
 .message-box {
   background: #fff;
-  padding: 40px;
-  border-radius: 30px;
-  width: 85%;
-  max-width: 420px;
+  padding: clamp(28px, 6vw, 40px);
+  border-radius: 28px;
+  width: min(90vw, 420px);
   text-align: center;
   box-shadow: 0 25px 50px rgba(0,0,0,.15);
-  animation: fadeUp 1.6s ease forwards;
+  animation: fadeUp 1.4s ease forwards;
 }
 
 .message-box h2 {
   color: #ff2f92;
   margin-bottom: 16px;
+  font-size: clamp(1.3rem, 5vw, 1.7rem);
 }
 
 .message-box p {
   color: #444;
-  font-size: 1.05rem;
+  font-size: clamp(0.95rem, 3.8vw, 1.05rem);
   line-height: 1.6;
 }
 
@@ -163,6 +182,14 @@ body {
   from { opacity: 0; transform: translateY(40px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
+/* ===== SAFARI PERFORMANCE ===== */
+@supports (-webkit-touch-callout: none) {
+  .screen, .cake-container, .cake-emoji, .slice-emoji {
+    transform: translateZ(0);
+  }
+}
+
 </style>
 </head>
 
@@ -180,7 +207,7 @@ body {
 <!-- ===== SCREEN 2 ===== -->
 <div class="screen hidden" id="screen2">
   <div class="instruction" id="instruction">
-    Swipe or Tap the Cake to Serve a Slice 🎂🍰
+    Tap the Cake to Serve a Slice 🎂🍰
   </div>
 
   <div class="cake-container" id="cakeContainer">
@@ -220,39 +247,43 @@ function goToCake() {
   setTimeout(() => {
     screen1.classList.add('hidden');
     screen2.classList.remove('hidden');
-    cakeContainer.classList.add('show');
-  }, 600);
+    requestAnimationFrame(() => {
+      cakeContainer.classList.add('show');
+    });
+  }, 500);
 }
 
-/* INSTANT TOUCH — SLOW VISUALS */
+/* ===== TOUCH SAFE ===== */
 let served = false;
 
-cakeContainer.addEventListener('pointerdown', () => {
+cakeContainer.addEventListener('pointerdown', serveOnce, { passive: true });
+cakeContainer.addEventListener('touchstart', serveOnce, { passive: true });
+cakeContainer.addEventListener('click', serveOnce);
+
+function serveOnce() {
   if (served) return;
+  served = true;
   serveSlice();
-});
+}
 
 function serveSlice() {
-  served = true;
-
   cake.style.opacity = 0;
   instruction.style.opacity = 0;
 
   slice.style.opacity = 1;
   slice.style.transform = 'translateX(-50%) translateY(60px)';
 
-  setTimeout(() => cakeText.style.opacity = 1, 600);
+  setTimeout(() => cakeText.style.opacity = 1, 500);
 
   setTimeout(() => {
     screen2.style.opacity = 0;
     setTimeout(() => {
       screen2.classList.add('hidden');
       screen3.classList.remove('hidden');
-    }, 900);
-  }, 2600);
+    }, 800);
+  }, 2400);
 }
 </script>
 
 </body>
 </html>
-
